 - Fix for bug 22918: Deal with possible absent ThreadState instance
 - Fix for bug 22921: Added null guard to prevent NPE
 - Fix for bug 22920: Added null guard to prevent NPE
 - Fix for bug 22891: Added null guard
 - Fix for bug 22890: Added null guard
 - Fix for bug 22883: Added missing reseller interfaces

* 2012-09-04 - thorben.betten@open-xchange.com

 - Fix for bug 22886: Read and write support for ISO-2022-CN charset
 - Fix for bug 22884: Set appropriate content type
 - Fix for bug 22777: Fixed possible NPE when saving a draft
 - Fix for bug 22882: Prevent possible NPE
 - Fix for bug 22880: Prevent possible NPE

* 2012-09-04 - jan.bauerdick@open-xchange.com

 - New bundle c.o.aws.loadbalancing: Register and deregister ec2 instances with the elastic loadbalancer

* 2012-09-03 - thorben.betten@open-xchange.com

 - Fix for bug 22889: No keep-alive run if very first request body chunk not yet received

* 2012-08-31 - marcus.klein@open-xchange.com

 - Fix for bug 22751: Registering properly the actions for the conversion HTTP/JSON interface within dispatcher.

* 2012-08-29 - thorben.betten@open-xchange.com

 - Fix for bug 22860: Prevent possible NPE in file management

* 2012-08-29 - jan.bauerdick@open-xchange.com

 - New bundle c.o.cluster.discovery.aws: Find aws nodes in cluster

* 2012-08-28 - jan.bauerdick@open-xchange.com

 - New bundle c.o.aws: Providing services to communicate with amazon web services

* 2012-08-28 - thorben.betten@open-xchange.com

 - Fix for bug 22851: Abort keep-alive run if expected first request chunk has not been received so far

* 2012-08-27 - thorben.betten@open-xchange.com

 - Fix for bug 22755: Proper Content-Disposition header when downloading a file with Safari

* 2012-08-24 - jan.bauerdick@open-xchange.com

 - Fix for bug 22838: New implementation of com.openexchange.sessiond.impl.SessionHandler.merge

* 2012-08-20 - thorben.betten@open-xchange.com
